cart and wishlist completed

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
       <section class="section">
         <div class="container">
           <ul class="categories"></ul>
+          <div class="loader-wrapper"></div>
           <ul class="products"></ul>
           <div class="not-found">
             <div class="not-found__icon">
