project full completed

--- a/src/cart.html
+++ b/src/cart.html
@@ -16,6 +16,7 @@
     <section class="section">
       <div class="container product-page">
         <main>
+          <div class="loader-wrapper"></div>
           <ul class="products"></ul>
           <div class="not-found">
             <div class="not-found__icon">
@@ -39,6 +40,9 @@
               We couldn't find any items matching your search.<br />Please try
               different keywords.
             </p>
+          </div>
+          <div class="wrapper-scroll-up-btn">
+            <button class="btn-scroll-up" type="button">⮝</button>
           </div>
         </main>
 
@@ -74,5 +78,6 @@
     </section>
     <load src="./partials/modal.html" />
     <script type="module" src="./cart.js"></script>
+    <script type="module" src="./js/theme.js"></script>
   </body>
 </html>
