--- a/src/index.html
+++ b/src/index.html
@@ -43,11 +43,15 @@
               different keywords.
             </p>
           </div>
+          <div class="wrapper-scroll-up-btn">
+            <button class="btn-scroll-up" type="button">⮝</button>
+          </div>
         </div>
       </section>
     </main>
     <load src="./partials/modal.html" />
     <script type="module" src="./home.js"></script>
     <script type="module" src="./js/modal.js"></script>
+    <script type="module" src="./js/theme.js"></script>
   </body>
 </html>
