--- a/src/wishlist.html
+++ b/src/wishlist.html
@@ -17,6 +17,7 @@
     <main>
       <section class="section">
         <div class="container">
+          <div class="loader-wrapper"></div>
           <ul class="products"></ul>
           <div class="not-found">
             <div class="not-found__icon">
@@ -41,10 +42,14 @@
               different keywords.
             </p>
           </div>
+          <div class="wrapper-scroll-up-btn">
+            <button class="btn-scroll-up" type="button">⮝</button>
+          </div>
         </div>
       </section>
     </main>
     <load src="./partials/modal.html" />
     <script type="module" src="./wishlist.js"></script>
+    <script type="module" src="./js/theme.js"></script>
   </body>
 </html>
